# hummingbird-monitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .snyk  AGENTS.md  DETECTION_IMPROVEMENT_PLAN.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  check_gpu.py  coverage-badge.json  debug_inference.py  docker-compose.yml  docker-wyze-bridge_rtsp_info.json  nginx.conf  pyproject.toml
.agent/rules/: copilot.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  security.yml  snyk.yml
docs/: model_fine_tuning_cookbook.md
notebooks/: yolo_image_annotation.ipynb
scripts/: build_yolo_dataset.py  check_job_status.py  check_obs_state.py  check_pipeline_health.py  debug_crop.py  download_annotation_models.py  extract_test_videos.py  find_test_videos.py  requeue_obs_53.py  rtsp_diagnostics.py  rtsp_test_server.py  run_annotator.py  run_detection_test.sh  scan_video.py  test_detection.py  test_obs_53.py  test_obs_53_extended.py  test_obs_53_nms_debug.py  tune_magic_wand.py
src/hbmon/: __init__.py  annotation_detector.py  annotation_jobs.py  annotation_state.py  annotation_storage.py  cache.py  clip_model.py  clustering.py  config.py  db.py  models.py  observation_tools.py  openvino_utils.py  recorder.py  schema.py  thumbnail.py  utils.py  web.py  worker.py  yolo_utils.py
src/hbmon/static/: background.js  calibrate.js  column_selector.js  lazy_load.js  observations_bulk.js  style.css  table_sort.js  theme.js  timestamps.js  zoom.js
src/hbmon/templates/: _annotate_card.html  _macros.html  annotate.html  annotate_detail.html  annotate_review.html  background.html  base.html  calibrate.html  candidate_detail.html  candidates.html  config.html  index.html  individual_detail.html  individuals.html  observation_detail.html  observations.html  split_review.html
tests/: __init__.py  conftest.py  test_annotation_detector.py  test_annotation_state.py  test_annotation_storage.py  test_api.py  test_background_image.py  test_background_subtraction.py  test_cache_helpers.py  test_cache_helpers_sync.py  test_candidate_workflow.py  test_clip_classifier.py  test_clip_helpers.py  test_clip_model_runtime.py  test_clustering_extra.py  test_clustering_functions.py  test_clustering_more.py  test_config.py  test_config_functions.py  test_config_helpers.py  test_config_io.py  test_config_page.py  test_config_ui_tracking.py  test_db_coverage.py  test_db_functions.py  test_db_models.py  test_detector_yolo.py  test_ffmpeg_recorder.py  test_hbmon.py  test_individual_prototypes.py  test_init.py  test_magic_wand.py  test_models_functions.py  test_models_stubs.py  test_observation_tools.py  test_openvino_utils.py  test_optional_dependency_stubs.py  test_recorder.py  test_reid.py  test_ringbuffer.py  (+36 more)
tests/integration/: test_detection_pipeline.py  test_proxy_stream_setup.py  test_web_lazy_app_export.py  test_web_stream_no_cv2.py  test_worker_e2e.py  test_worker_pipeline.py
tests/integration/test_data/: README.md
tests/integration/test_data/e2e/prod_fp_69/: config.json  metadata.json
tests/integration/test_data/e2e/prod_pos_50/: metadata.json
tests/integration/test_data/edge_cases/low_light_0/: metadata.json
tests/integration/test_data/edge_cases/motion_blur_0/: metadata.json
tests/integration/test_data/false_positive_0/: metadata.json
tests/integration/test_data/feeding_0/: metadata.json
tests/integration/test_data/flying_0/: metadata.json
tests/integration/test_data/perched_0/: metadata.json
tests/integration/test_data/perched_1/: metadata.json
tests/integration/test_data/true_positive_bird_0/: metadata.json
tests/ui/: __init__.py  test_config_form.py  test_dashboard.py  test_roi_calibration.py
